# mono-ai

./: .gitignore  Cargo.toml  LICENSE  README.md
example/: Cargo.toml
example/src/: main.rs
examples/: Cargo.toml
examples/chat/: Cargo.toml
examples/chat-vision/: Cargo.toml
examples/chat-vision/src/: main.rs
examples/chat/src/: main.rs
examples/ollama-management/: Cargo.toml
examples/ollama-management/src/: main.rs
macros/: Cargo.toml
macros/src/: lib.rs
src/: lib.rs
src/core/: error.rs  fallback.rs  mod.rs  tool.rs  types.rs
src/mono/: client.rs
src/providers/: mod.rs
src/providers/anthropic/: client.rs  mod.rs  types.rs
src/providers/ollama/: client.rs  mod.rs  options.rs  types.rs  utilities.rs
src/providers/openai/: client.rs  mod.rs  types.rs
src/providers/openrouter/: client.rs  mod.rs  types.rs
src/unified/: client.rs
