[package]
name = "unified-ai"
edition = "2024"
version = "1.3.0"
description = "Provider-agnostic Rust AI library"
repository = "https://github.com/unfaded/unified-ai"
readme = "README.md"
license = "MIT"
authors = ["unfaded"]

[dependencies]
anyhow = "1.0.98"
base64 = "0.22.1"
futures-util = "0.3.31"
rand = "0.9.1"
regex = "1.11.1"
reqwest = { version = "0.12.22", features = ["json", "stream"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.46.1", features = ["full"] }
uuid = { version = "1.0", features = ["v4"] }
