[package]
name = "ollama-rust-macros"
description = "procedural macros for tools in ollama-rust"
license = "MIT"
version = "1.0.1"
edition = "2024"
readme = "../README.md"
repository = "https://github.com/unfaded/ollama-rust"
authors = ["unfaded"]

[lib]
proc-macro = true

[dependencies]
quote = "1.0.40"
serde_json = "1.0.140"
syn = { version = "2.0.104",  features = ["full"] }
