[package]
name = "unified-ai-macros"
description = "procedural macros for tools in unified-ai"
license = "MIT"
version = "2.0.0"
edition = "2024"
readme = "../README.md"
repository = "https://github.com/unfaded/unified-ai"
authors = ["unfaded"]

[lib]
proc-macro = true

[dependencies]
quote = "1.0.40"
serde_json = "1.0.140"
syn = { version = "2.0.104",  features = ["full"] }
